# ta-learn

./: pyproject.toml
backtest_data/: BTC-ETH.csv
ta_learn/: config.py  main.py  types_.py  week1.py  week2.py  week3.py
